--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-sweetalert": "^5.1.9",
     "react-dom": "^16.13.1",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "sweetalert": "^2.1.2",
